compiler/tests/fixtures/invalid/semantics/bare_character_role_in_action.viv
// Invalid: character role in an action with no participation mode or modifier label

action rescue:
    roles:
        @rescuer:
            as: initiator
        @animal:
            as: character
